test/error/readonly.luau
table.insert(math, 1)
